src/objects/User.object
<CustomObject>
    <fields>
        <fullName>About_Me_Custom__c</fullName>
        <description>Used for users on the community to describe themselves. We are using a custom field because the standard field does not support rich text.</description>
        <inlineHelpText>Use this area to describe something about you or your business</inlineHelpText>
        <label>About Me</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_in_Quota__c</fullName>
        <label>All in Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Count_Beginning_of_Last_Month__c</fullName>
        <label>Client Count Beginning of Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Count_Beginning_of_Month__c</fullName>
        <inlineHelpText>Used in Dashboard reporting to get monthly churn rates</inlineHelpText>
        <label>Client Count Beginning of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Alias_1__c</fullName>
        <inlineHelpText>allows you to specify an alternative email address of the user. Besides the primary email address alias will also be used in order to identify who the owner, organizer or invitees are of tasks/events created by Groove.</inlineHelpText>
        <label>Email Alias 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Alias_2__c</fullName>
        <inlineHelpText>allows you to specify an alternative email address of the user. Besides the primary email address alias will also be used in order to identify who the owner, organizer or invitees are of tasks/events created by Groove.</inlineHelpText>
        <label>Email Alias 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Google_Plus_ID__c</fullName>
        <inlineHelpText>is the G+ ID of the user. This is populated via the Groove Auth Provider Handler at the first time a user logs in via this Auth Provider.</inlineHelpText>
        <label>G+ ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Is_Unresolved_Items_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls whether or not this user can be authorized by other users to managed their unresolved items.

WARNING: enabling this option for a user might expose the content of other users&apos; emails to this user.</inlineHelpText>
        <label>Is Unresolved Items Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__My_Unresolved_Items_Agent__c</fullName>
        <inlineHelpText>Controls who you authorize too handle your Groove Unresolved Items (i.e. deleting or assigning synced emails to related records).

WARNING: This will expose some of your emails to the Unresolved Items Agent.</inlineHelpText>
        <label>My Unresolved Items Agent</label>
        <relationshipName>Unresolved_Items_Clients</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Days_Passed__c</fullName>
        <description>Used for attainment reports - calculates which day of the month today is</description>
        <formula>IF(DAY(TODAY())=1, 0, DAY(TODAY())-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Passed in the Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Passed_in_the_Quarter__c</fullName>
        <formula>IF (
OR(Month(Today())= 1,Month(Today())= 4,Month(Today())= 7,Month(Today())= 10)&amp;&amp;DAY(TODAY())=1,

0,

IF(Month(TODAY()) &lt; 4, ((Today()-(DATEVALUE(TEXT(YEAR( today() )) &amp; &quot;-01-01&quot;)))),

IF(Month(Today()) &lt; 7, ((Today()-(DATEVALUE(TEXT(YEAR( TODAY())) &amp; &quot;-04-01&quot;)))),

IF(Month(Today()) &lt; 10, ((Today()-(DATEVALUE(TEXT(YEAR( TODAY())) &amp; &quot;-07-01&quot;)))),

IF(Month(Today()) &lt; 13, ((Today()-(DATEVALUE(TEXT(YEAR( TODAY())) &amp; &quot;-10-01&quot;)))),null)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Passed in the Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_the_Month__c</fullName>
        <description>used in attainment reports - says how many days are in the current month</description>
        <formula>/*DAY(IF(
MONTH(  TODAY()  ) = 12,
DATE( YEAR(  TODAY() ), 12, 31 ),
DATE( YEAR(  TODAY()  ), MONTH (  TODAY()  ) + 1, 1 ) - 1 
))*/
if ( 
and(mod(year(today()),4)=0,month(today())=2),29, 
case(month(today()) 
,2,28 
,4,30 
,6,30 
,9,30 
,11,30,31 
) 
)</formula>
        <inlineHelpText>DAY(DATE(YEAR(TODAY()),MONTH(TODAY())+1,1)-1)</inlineHelpText>
        <label>Days in the Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_the_Quarter__c</fullName>
        <formula>(IF (Month(Today()) &lt;4 , DATEVALUE(TEXT(YEAR( today() ))   +    &quot;-03-31&quot;),
IF (Month(Today()) &lt;7 , DATEVALUE(TEXT(YEAR( today() ))   +   &quot;-06-30&quot;),
IF (Month(Today()) &lt;10 , DATEVALUE(TEXT(YEAR( today() ))   +   &quot;-09-30&quot;),
IF (Month(Today()) &lt;13, DATEVALUE(TEXT(YEAR( today() ))   +   &quot;-12-31&quot;), null
))))-

(IF (Month(Today()) &lt;4 , DATEVALUE(TEXT(YEAR( today() ))  &amp;  &quot;-01-01&quot;),
IF (Month(Today()) &lt;7 , DATEVALUE(TEXT(YEAR( today() ))  &amp;  &quot;-04-01&quot;),
IF (Month(Today()) &lt;10 , DATEVALUE(TEXT(YEAR( today() ))  &amp;  &quot;-07-01&quot;),
IF (Month(Today()) &lt;13, DATEVALUE(TEXT(YEAR( today() ))  &amp;  &quot;-10-01&quot;), null
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in the Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_passed_in_the_week__c</fullName>
        <formula>MOD(TODAY() - DATE(1900, 1, 7), 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Passed in the Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edit_User__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;Id&amp;&apos;/e&apos;,&apos;edit&apos;,&apos;_blank&apos;)</formula>
        <inlineHelpText>Link to go to user&apos;s edit detail page</inlineHelpText>
        <label>Edit User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Passed__c</fullName>
        <formula>(Days_Passed__c *24)+(IF((Value(MID ( TEXT (NOW()), 12, 2)))&lt;=5,(Value(MID ( TEXT (NOW()), 12, 2))+18),(Value(MID ( TEXT (NOW()), 12, 2))-5)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Passed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Passed_in_the_Quarter__c</fullName>
        <formula>(Days_Passed_in_the_Quarter__c *24)+ (IF((Value(MID ( TEXT (NOW()), 12, 2)))&lt;=5,(Value(MID ( TEXT (NOW()), 12, 2))+18),(Value(MID ( TEXT (NOW()), 12, 2))-5)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Passed in the Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Passed_in_the_Week__c</fullName>
        <formula>IF( Days_passed_in_the_week__c =0, (IF((Value(MID ( TEXT (NOW()), 12, 2)))&lt;=5,(Value(MID ( TEXT (NOW()), 12, 2))+18),(Value(MID ( TEXT (NOW()), 12, 2))-5))), (Days_passed_in_the_week__c * 24)+(IF((Value(MID ( TEXT (NOW()), 12, 2)))&lt;=5,(Value(MID ( TEXT (NOW()), 12, 2))+18),(Value(MID ( TEXT (NOW()), 12, 2))-5))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Passed in the Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_in_the_Month__c</fullName>
        <formula>Days_in_the_Month__c *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours in the Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_in_the_Quarter__c</fullName>
        <formula>Days_in_the_Quarter__c * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours in the Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_in_the_Week__c</fullName>
        <formula>168</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours in the Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Included_in_Round_Robin__c</fullName>
        <description>Should this user be included in the Round Robin for assigning leads?</description>
        <inlineHelpText>Please note that only &quot;Bigcommerce Sales Rep&quot; users can receive leads through the Round Robin, regardless of this setting.</inlineHelpText>
        <label>Included in Round Robin</label>
        <picklist>
            <picklistValues>
                <fullName>Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Included</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operations_Approver__c</fullName>
        <description>used in approval workflows</description>
        <label>Operations Approver</label>
        <relationshipName>Approvals</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Pro_Rate_Percent_of_Month_Lapsed__c</fullName>
        <formula>Day(Today())/

(IF(Month(TODAY())=12,
DATE(YEAR(TODAY()),12,32)-TODAY(),
DATE(YEAR(TODAY()),
MONTH(TODAY())+1,1)-TODAY()-1)+DAY(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro-Rate Percent of Month Lapsed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <description>Used in Sales dashboards</description>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ramp_Level__c</fullName>
        <description>Used in Sales dashboards</description>
        <formula>IF(Tenured_Months__c =1, 0.25,
IF(Tenured_Months__c =2, 0.5,
IF(Tenured_Months__c =3, 0.75,
IF(Tenured_Months__c &gt;=4, 1,0)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ramp Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <picklist>
            <picklistValues>
                <fullName>Guided Selling</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Search Filters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Followed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype_Name__c</fullName>
        <description>Used in international email templates</description>
        <inlineHelpText>Used in international email templates</inlineHelpText>
        <label>Skype Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Quota__c</fullName>
        <description>used for sales dashboards</description>
        <label>Store Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Link_Acquisition__c</fullName>
        <inlineHelpText>success squad survey</inlineHelpText>
        <label>Survey Link - Acquisition</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_Link__c</fullName>
        <inlineHelpText>For client success survey personalization to be used in email templates</inlineHelpText>
        <label>Survey Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tenured_Months__c</fullName>
        <description>Used for Sales dashboard</description>
        <label>Tenured Months in Role</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Count__c</fullName>
        <description>For reporting only - to summarize by owner count</description>
        <formula>1</formula>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Detail__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;Id&amp;&apos;?noredirect=1&apos;,&apos;Detail&apos;,&apos;_blank&apos;)</formula>
        <label>User Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Image__c</fullName>
        <inlineHelpText>Link to the user&apos;s photo to be used in email templates</inlineHelpText>
        <label>User Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Weekly_All_In_Quota__c</fullName>
        <formula>All_in_Quota__c / Weeks_in_the_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly All In Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Quota__c</fullName>
        <formula>Quota__c / Weeks_in_the_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weeks_in_the_Month__c</fullName>
        <formula>CASE(MONTH(TODAY()),
   2, IF(MOD(YEAR(TODAY()),4)=0, 29/7, 28/7),
   4, 30/7,
   6, 30/7,
   9, 30/7,
   11, 30/7,
   31/7
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weeks in the Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lmscons__CFS_Status__c</fullName>
        <label>CFS Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not CFS user</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lmscons__Cornerstone_Group_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <label>Cornerstone Group Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lmscons__Cornerstone_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Cornerstone ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Is_logged_out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, user has logged and is not available to receive distributions from the Distribution Engine</inlineHelpText>
        <label>Is logged out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__InsideSales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is an admin of the InsideSales system.</description>
        <label>InsideSales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_subdomain__c</fullName>
        <label>InsideSales Subdomain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_token__c</fullName>
        <label>InsideSales Authorization Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__password__c</fullName>
        <label>InsideSales Password</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__permissions__c</fullName>
        <label>InsideSales Permissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qbdialer__username__c</fullName>
        <label>InsideSales Username</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>website__c</fullName>
        <description>Your store URL</description>
        <inlineHelpText>Your store URL</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>ActiveLiveAgentUsers</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LIVEAGENT_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LIVEAGENT_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>remote</value>
        </filters>
        <label>Active Live Agent Users</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator - Contractor</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Client_Success_Manager</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CREATED_DATE</columns>
        <columns>LIVEAGENT_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Client Success Manager</value>
        </filters>
        <label>Client Success Manager</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Inactive Users</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Inbound_Sales</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Inbound Sales</value>
        </filters>
        <label>Inbound Sales</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>LDRs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>LDR</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notContain</operation>
            <value>leader</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notContain</operation>
            <value>engineer</value>
        </filters>
        <label>LDRs</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Look_for_user</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>stegmann</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Community Client User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ADMIN: Look for user</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketingUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MARKETING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>marketing</value>
        </filters>
        <label>Marketing</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Migration</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Migration</value>
        </filters>
        <label>Migration</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>No_Role</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>chatter</value>
        </filters>
        <label>No Role</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Partner_Sales</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Partner Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>contains</operation>
            <value>partner</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>notContain</operation>
            <value>partnership,enterprise</value>
        </filters>
        <label>Channel Partner Team</label>
        <sharedTo/>
    </listViews>
</CustomObject>